# raytracer

./: .gitignore  CMakeLists.txt
include/: config_loader.h  init.h  material.h  minimal.h  perlin.h  proceduralTextures.h  stHardwareOutput.h  stScene.h
resouces/: config.txt
src/: applicationLoader.cpp  config.txt  config_loader.cpp  config_loader.h  directx.cpp  directx.h  global.h  init.cpp  main_general.cpp  material.h  perlin.cpp  proceduralTextures.cpp  proceduralTextures.h  stHardwareOutput.cpp  stScene.back  stScene.cpp  stScene.h
